# PlaneWar

./: .clang-format  .clangd  CMakeLists.txt  README.md  项目分析.md
src/: config.h  game.cpp  game.h  main.cpp  statistic.cpp  statistic.h
src/entity/: bullet.cpp  bullet.h  enemy.cpp  enemy.h  entity.cpp  entity.h  player.cpp  player.h
src/entity_pool/: bullet_pool.cpp  bullet_pool.h  enemy_pool.cpp  enemy_pool.h  entity_pool.cpp  entity_pool.h
src/manager/: bullet_manager.cpp  bullet_manager.h  collision_manager.cpp  collision_manager.h  enemy_manager.cpp  enemy_manager.h  entity_manager.hpp
src/window/: window.cpp  window.h
test/: player_display.cpp  shared_ptr.cpp
